--- a/STM.GDA.Web/Views/Shared/_Layout.cshtml
+++ b/STM.GDA.Web/Views/Shared/_Layout.cshtml
@@ -14,54 +14,73 @@
 	<link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
 </head>
 <body>
-	<div class="navbar navbar-fixed-top">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<div class="navbar-brand">
-				<a href="@Url.Action("", "")" title="GDA" class="links">
-					<img alt="List View" src="@Url.Content("~/Image/header-logo.png")"><span class="logo-text">GDA</span>
-				</a>
-			</div>
-		</div>
-		<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
-				<li>@Html.ActionLink("Applications et services", "Index", "Composant")</li>
-				<li>@Html.ActionLink("Déploiements", "Index", "Deploiement")</li>
-			</ul>
-		</div>
-	</div>
-	<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					Confirmation de suppression
-				</div>
-				<div class="modal-body">
-					Êtes-vous certain de vouloir supprimer ce <span id="modal-delete-name"></span>?
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-					<button type="button" id="btnSupprimerConfirmer" class="btn btn-danger btn-ok">Supprimer</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container body-content">
-		@RenderBody()
-		<hr />
-		<footer>
-			<p>&copy; @DateTime.Now.Year - PFE</p>
-		</footer>
-	</div>
-	<script>
-		function showDeleteDialog(model) {
-			$("#modal-delete-name").text(model.toLowerCase());
-			$("#confirm-delete").modal("toggle");
-		}
-	</script>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="navbar-brand">
+                <a href="@Url.Action("", "")" title="GDA" class="links">
+                    <img alt="List View" src="@Url.Content("~/Image/header-logo.png")"><span class="logo-text">GDA</span>
+                </a>
+            </div>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Applications et services", "Index", "Composant")</li>
+                <li>@Html.ActionLink("Déploiements", "Index", "Deploiement")</li>
+            </ul>
+        </div>
+    </div>
+    <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    Confirmation de suppression
+                </div>
+                <div class="modal-body">
+                    Êtes-vous certain de vouloir supprimer ce <span id="modal-delete-name"></span>?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                    <button type="button" id="btnSupprimerConfirmer" class="btn btn-danger btn-ok">Supprimer</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="confirm-info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    Information
+                </div>
+                <div class="modal-body">
+                    <span id="modal-info-name"></span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - PFE</p>
+        </footer>
+    </div>
+    <script>
+        function showDeleteDialog(model) {
+            $("#modal-delete-name").text(model.toLowerCase());
+            $("#confirm-delete").modal("toggle");
+        }
+        function showInformationDialog(model) {
+            $("#modal-info-name").text(model);
+            $("#confirm-info").modal("toggle");
+        }
+    </script>
 </body>
 </html>
