--- a/STM.GDA.Web/Views/Deploiement/_Liste.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/_Liste.cshtml
@@ -6,7 +6,7 @@
 {
 	<div class="divComposant@(deploiement.DernierDeploiementAffiche ? " dernier-element" : "")@(deploiement.DateDeploiement < DateTime.Now ? " deployed" : "")" onclick="window.location.href = '@Url.Action("Details", "Deploiement", new { id =  @Html.ValueFor(x => deploiement.Id) })'">
 		<div class="col-sm-10 bold padding-top">
-			@Html.DisplayFor(x => deploiement.Composant.NomAbreviatation)
+			@Html.DisplayFor(x => deploiement.Composant.NomAbreviation)
 		</div>
 
 		<div class="col-sm-2 italic right-align padding-top version">
