--- a/STM.GDA.Web/Views/Composant/Index.cshtml
+++ b/STM.GDA.Web/Views/Composant/Index.cshtml
@@ -49,6 +49,10 @@
 			window.location.href ='@Url.Action("GenererCSVCourt", "Composant")' + "?filtre=" + $("#txtFiltre").val();
 		});
 
+		$("#btnExportLong").on('click', function (e) {
+			window.location.href ='@Url.Action("GenererCSVLong", "Composant")' + "?filtre=" + $("#txtFiltre").val();
+		});
+
         $("#btnCreer").on('click', function (e) {
             window.location.href = '@Url.Action("Creer", "Composant")';
         });
