L'environnement sélectionné est maintenant conservé lorsqu'on passe de détails à modification d'un composant et vice-versa. La grosseur du textarea pour les détails d'un déploiement a été augmentée. La génération du fichier texte descriptif fonctionne maintenant comme l'export excel, il n'y a plus de fichier temporaire sur le serveur. Ajout des champs BC et BW dans l'export csv long et le fichier descriptif. Suppression de l'ancien fichier css de selectize du projet. Ajout du logo STM dans le projet.

--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -166,8 +166,11 @@
 </div>
 
 <script>
-    var currentEnvironnement = $("#divDependance div:first");
-    currentEnvironnement.addClass("currentEnvironnement");
+	var currentEnvironnement;
+
+	$(document).ready(function () {
+		$("#ddlEnvironnement").trigger("change");
+	});
 
     $("#ddlEnvironnement").on("change", function () {
         if (currentEnvironnement) {
@@ -178,8 +181,8 @@
         currentEnvironnement.addClass("currentEnvironnement");
     });
 
-    $("#btnModifier").click(function () {
-        window.location.href = '@Url.Action("Modifier", "Composant", new { id = @Html.Raw(Json.Encode(Model.Id)) })';
+	$("#btnModifier").click(function () {
+		window.location.href = '@Url.Action("Modifier", "Composant", new { id = @Html.Raw(Json.Encode(Model.Id)) })' + "?idEnvironnement=" + $("#ddlEnvironnement").val();
     });
 
     $("#btnSupprimerConfirmer").click(function () {
