--- a/STM.GDA.Web/Views/Composant/Modifier.cshtml
+++ b/STM.GDA.Web/Views/Composant/Modifier.cshtml
@@ -190,8 +190,9 @@
                         BC: $("#BC").val(),
                         BW: $("#BW").val(),
                         Technologies: getSelectedItems("TechnologiesSelectionnees"),
-                        Dependances: getDependanceEnvironnement()
-                    }
+						Dependances: getDependanceEnvironnement(),
+						EnvironnementSelectionne: $("#ddlEnvironnement").val()
+					}
                 }
             );
         }
