--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -101,7 +101,7 @@
                     @Html.DisplayNameFor(m => m.Details)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.Details, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.Details, new { htmlAttributes = new { @class = "form-control", rows = 6 } })
                 </div>
             </div>
         </div>
