Ajout de la sauvegarde de l'enregistrement sélectionné lorsqu'on pèse sur annuler.

--- a/STM.GDA.Web/Views/Composant/Modifier.cshtml
+++ b/STM.GDA.Web/Views/Composant/Modifier.cshtml
@@ -168,7 +168,7 @@
     });
 
     $("#btnAnnuler").click(function () {
-        window.location.href = '@Url.Action("Details", "Composant", new { id = @Html.Raw(Json.Encode(Model.Id)) })';
+        window.location.href = '@Url.Action("Details", "Composant", new { id = @Html.Raw(Json.Encode(Model.Id)) })' + "?idEnvironnement=" + $("#ddlEnvironnement").val();
     });
 
     $("#btnSauvegarder").click(function () {
