Ajout d'une gestion d'erreur lors de l'ajout au calendrier afin d'évite que l'application plante si un problème survient.

--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -180,7 +180,10 @@
         ).done(function (data) {
             if (data.status === "Created") {
                 showInformationDialog('Le déploiement a été ajouté à votre calendrier.');
-			}
+            }
+            else if (data.status === "Error") {
+                showInformationDialog('Une erreur est survenue.');
+            }
 		});
     });
 </script>
